--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -35,11 +35,11 @@
                                 <a href="articles/<%= article.slug %>" class="btn btn-2">Read More</a>
                             </div>
                             <div class="col">
-                                <!--<a href="articles/edit/<%= article.id %>" class="btn btn-2">Edit</a>-->
+                                <a href="articles/edit/<%= article.id %>" class="btn btn-2">Edit</a>
                             </div>
                             <div class="col">
                                 <form action="/articles/<%= article.id %>?_method=DELETE" method="POST">
-                                    <!--<button class="btn btn-2">Delete</button>-->
+                                    <button class="btn btn-2">Delete</button>
                                 </form>
                             </div>
                         </div>
